test/src/e2e_vm_tests/test_programs/should_fail/attributes_missing_annotated_item/src/trailing_multiple_mixed_attributes_and_comments.sw
library;

/// Outer comment.
#[allow(dead_code)]
//! Inner comment.
//! Inner comment.
#[allow(deprecated)]
/// Outer comment.
/// Outer comment.
/// Outer comment.
#[allow(deprecated)]
//! Inner comment.